--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
     "name": "Getting Started Example",
     "version": "1.0",
     "description": "Build an Extension!",
-    "permissions": ["declarativeContent", "storage"],
+    "permissions": ["activeTab", "declarativeContent", "storage"],
     "background": {
       "scripts": ["background.js"],
       "persistent": false
@@ -24,4 +24,3 @@
     },
     "manifest_version": 2
   }
-  
